# h98-miner

./: .env.example  .gitignore  Cargo.toml  README.md
src/: gpu.rs  keccak_kernel.cl  main.rs
