[package]
name = "h98-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
hex = "0.4"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
rand = "0.8"
num_cpus = "1"
dotenvy = "0.15"
keccak-hash = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
